Fix small text being hard to see

--- a/styles.css
+++ b/styles.css
@@ -29,3 +29,6 @@ body {
 	margin-left: 50px;
 } 
 
+small {
+	color: #fbfbfb;
+}
